--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,7 +106,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./src"
   },
-  "include": ["../test/utils/*.ts"]
+  "include": ["../test/utils/*.ts", "../chlss-ts/src/*.ts"]
 }
