package.json - created scripts to run python scripts, and for invoke tests and integration_tests.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose test/",
+    "integration-test": "jest --verbose integration_tests/",
+    "generate-legal-moves": "test_data_generator\\legal_moves_generator.py --output integration_tests\\data\\legal_moves.json --repeat 500 --random-position-moves 75",
+    "generate-random-games": "test_data_generator\\random_games_generator.py --output integration_tests\\data\\random_games.json --repeat 100 --move-in-case 50",
+    "generate-empty-legal-moves": "test_data_generator\\legal_moves_generator.py --output integration_tests\\data\\legal_moves.json --repeat 0 --random-position-moves 0",
+    "generate-empty-random-games": "test_data_generator\\random_games_generator.py --output integration_tests\\data\\random_games.json --repeat 0 --move-in-case 0"
   },
   "keywords": [],
   "author": "",
