--- a/package.json
+++ b/package.json
@@ -14,14 +14,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.3",
-    "webpack": "^5.78.0",
-    "webpack-cli": "^5.0.1"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.0.3"
   }
 }
