--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "chlss-ts",
   "version": "1.0.0-beta.1",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "jest --verbose test/",
     "integration-test": "jest --verbose integration_tests/",
@@ -36,5 +35,8 @@
     "jest": "^29.5.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.3"
-  }
+  },
+  "files": ["dist/"],
+  "types": "./dist/index.d.ts",
+  "main": "./dist/index.js"
 }
