--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,7 +107,8 @@
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
     "outDir": "./dist",
     "rootDir": "./src",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "declaration": true
   },
   "include": ["../test/utils/*.ts", "../chlss-ts/src/*.ts"]
 }
