--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chlss",
-  "version": "1.0.0-beta.1",
-  "description": "",
+  "version": "1.0.0-beta.2",
+  "description": "Open-Source Chess Engine in TypeScript.",
   "scripts": {
     "test": "jest --verbose test/",
     "integration-test": "jest --verbose integration_tests/",
