--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,5 +18,5 @@ jobs:
     - name: Publish
       run: npm publish
       env: 
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
 
