--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,11 +12,16 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16.x'
+        registry-url: 'https://registry.npmjs.org'
+
     - name: Setup
       run: npm ci
 
     - name: Publish
       run: npm publish
       env: 
-        NPM_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
 
