--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Setup
       run: npm ci
 
+    - name: Build
+      run: tsc
+
     - name: Publish
       run: npm publish
       env: 
